--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Main program. Needs images to run which I haven't uploaded here.
+electroCAD is an electric circuit schematic drawing software.
+Version alpha.0 is in the zip file.
+Main code is also here.
